--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Namaste React</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div id="root">
@@ -11,10 +12,8 @@
     </div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script>
-    const element = React.createElement('h1', {className: 'greeting'}, 'Hello, world from React! 🚀');
-    const root = document.getElementById('root');
-    ReactDOM.render(element, root);
+<script src="App.js">
+    
 </script>
 </body>
 </html>
